[package]
name = "s3archivefs-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.7"
aws_lambda_events = "0.7.3"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1.0.149"
serde_json = "1.0.89"
serde-xml-rs = "0.5.1"
aws-smithy-http = "0.51.0"
aws-smithy-types = "0.51.0"
aws-endpoint = "0.51.0"
xml_serde = "1.4.1"
url = "2.3.1"
libc = "0.2.138"
base64 = "0.13.1"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
http-range = "0.1.5"
s3archivefs = { version = "0.1.0", path = "../s3archivefs" }
