[package]
name = "s3archivefs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
log = "0.4.17"
env_logger = "0.10.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
aws-sdk-s3 = "0.21.0"
base64 = "0.13.1"
libc = "0.2.137"
nix = "0.26.1"
filetime = "0.2.18"
xattr = "1.0.0"
file-owner = "0.1.1"
fs4 = { version = "0.6.2", features = ["tokio-async"] }
structopt = "0.3.26"

[build-dependencies]
bindgen = "0.63.0"

[[bin]]
name = "s3archivefs"
path = "src/main.rs"
